corrected inline links and added display inline-block to button
Signed-off-by: goncalo pinto <gcorreiapinto@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <img src="images/profile_pic.jpg" alt="profile picture" class="img-avatar">
       <p>
         I'm really passionate about coding, computer science and videogames!
-        I decided to start Le Wagon Web Development Bootcamp to kickstart a change in career paths and I can't wait for what's to come!
+        I decided to start <strong>Le Wagon Web Development Bootcamp</strong> to kickstart a change in career paths and I can't wait for what's to come!
       </p>
-      <a href="" class="btn-grey">Discover Le Wagon</a>
+      <a href="https://www.lewagon.com/" class="btn-grey">Discover Le Wagon</a>
     </div>
     <div class="card">
       <h2>Follow me</h2>
